--- a/index.html
+++ b/index.html
@@ -1,3 +1,42 @@
-<! <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel = "stylesheet" href = "styles.css">
+    <title></title>
+  </head>
+  <body>
+    <h1> Travel destinations </h1>
+    <article class = "travel" >
+    <img src = "assets/nyc.jpeg" >
+    <img src = "assets/barcelona.jpeg" >
+    <img src = "assets/jordan.jpeg" >
+    <img src = "assets/france.jpeg">
+    <img src = "assets/amsterdam.jpeg">
+    <img src = "assets/copenhagen.jpeg">
+    <img src = "assets/nice.jpeg">
+    <img src = "assets/orlando.jpeg">
+    <img src = "assets/iceland.jpeg">
+    <img src = "assets/greece.jpeg">
+    <img src = "assets/azores.jpeg">
+    <img src = "assets/croatia.jpeg">
+    <img src = "assets/hawaii.jpeg">
+    <img src = "assets/ireland.jpeg">
+    <img src = "assets/nyc.jpeg">
+    <img src = "assets/singapore.jpeg">
+    <img src = "assets/konora.png">
+    <img src = "assets/vegas.jpeg">
+    <img src = "assets/china.jpeg">
+    <img src = "assets/ecuador.jpeg">
+    <img src = "assets/peru.jpeg">
+    <img src = "assets/india.jpeg">
+    <img src = "assets/antartica.jpeg">
+    <img src = "assets/philippines.jpeg">
+    <img src = "assets/guinea.jpeg">
+    <img src = "assets/domrepub.jpeg">
+    <img src = "assets/colombia.jpeg">
+    <img src = "assets/africa.jpeg">
+    <img src = "assets/jamaica.jpg">
+    <img src = "assets/biarritz.jpg">
+  </body>
 </html>
