second commit, centered images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1> Travel destinations </h1>
     <article class = "travel" >
+      <center>
     <img src = "assets/nyc.jpeg" >
     <img src = "assets/barcelona.jpeg" >
     <img src = "assets/jordan.jpeg" >
@@ -38,5 +39,6 @@
     <img src = "assets/africa.jpeg">
     <img src = "assets/jamaica.jpg">
     <img src = "assets/biarritz.jpg">
+  </center>
   </body>
 </html>
